--- a/ui/ui-input/ui-input.css
+++ b/ui/ui-input/ui-input.css
@@ -6,12 +6,16 @@ ui-input{
   height:var(--ui-object-height);
   border:none;
   border-radius:calc(var(--ui-object-height) / 4);
+  outline-offset:2px;
+  outline-width:2px;
+  outline-style:solid;
+  outline-color:transparent;
   color:var(--rgb-175-175-175);
   background-color:var(--rgb-25-25-25);
   overflow:hidden;}
 
 ui-input[animated]{
-  transition-property:background-color,color;}
+  transition-property:background-color,color,outline-color;}
 
 ui-input input{
   height:100%;
@@ -28,7 +32,11 @@ ui-input input{
   );}
 
 ui-input:not([icon-leading]) input{
-  padding-inline:calc(var(--ui-object-height) / 4 + 2px) 0;
+  padding-left:calc(var(--ui-object-height) / 4 + 2px);
+}
+
+ui-input:not([icon-trailing]):not([clearable]) input{
+  padding-right:calc(var(--ui-object-height) / 4 + 2px);
 }
 
 ui-input ui-icon{
@@ -41,34 +49,23 @@ ui-input ui-icon[icon="cancel"]{
   cursor:pointer;}
 
 @media (hover:hover){
-  ui-input[animated]:hover:not([disabled]),
-  ui-input[focused]{
+  ui-input[animated]:hover:not([disabled]){
     background-color:var(--rgb-35-35-35);}
 
   ui-input ui-icon[icon="cancel"]:hover{
     color:var(--rgb-225-225-225);}
 }
 
-ui-input::after{
-  content:'';
-  position:absolute;
-  inset:0;
-  border-style:solid;
-  border-width:2px;
-  border-color:transparent;
-  border-radius:var(--ui-border-radius);
-  pointer-events:none;
-  transition-duration:var(--ui-transition-duration);
-  transition-property:border-color;}
 
-ui-input[focused]::after{
-  border-color:var(--rgb-100-100-100);}
+ui-input[focused]{
+  background-color:var(--rgb-35-35-35);
+  outline-color:var(--rgb-100-100-100);}
 
-ui-input[error]::after{
-  border-color:var(--rgb-210-55-55);}
+ui-input[error]{
+  outline-color:var(--rgb-210-55-55);}
 
-ui-input[valid]::after{
-  border-color:var(--rgb-85-175-85);}
+ui-input[valid]{
+  outline-color:var(--rgb-85-175-85);}
 
-ui-input[warning]::after{
-  border-color:var(--rgb-210-175-20);}
+ui-input[warning]{
+  outline-color:var(--rgb-210-175-20);}
