--- a/ui/ui-switch/ui-switch.css
+++ b/ui/ui-switch/ui-switch.css
@@ -21,7 +21,6 @@ ui-switch > span{
   overflow:hidden;}
 
 
-
 ui-switch::after{
   content:'';
   position:absolute;
@@ -33,7 +32,7 @@ ui-switch::after{
   transition-property:transform;
   transition-duration:var(--ui-transition-duration);}
 
-ui-switch > label:has(input:checked){
+ui-switch[checked]{
   background-color: #2196F3;
 }
 
