--- a/ui/ui-input/ui-input.css
+++ b/ui/ui-input/ui-input.css
@@ -15,6 +15,7 @@ ui-input{
   overflow:hidden;}
 
 ui-input[animated]{
+  transition-duration:var(--ui-transition-duration);
   transition-property:background-color,color,outline-color;}
 
 ui-input input{
