--- a/ui/ui-switch/ui-switch.css
+++ b/ui/ui-switch/ui-switch.css
@@ -10,13 +10,14 @@ ui-switch{
   outline-offset:2px;
   outline-style:solid;
   outline-color:transparent;
-  background-color:var(--rgb-25-25-25);
+  background-color:rgb(100,100,100);
   line-height:1;
   cursor:pointer;
   overflow:hidden;}
 
 ui-switch[animated]{
-  transition-property:background-color,transform;}
+  transition-duration:var(--ui-transition-duration);
+  transition-property:background-color;}
 
 ui-switch:focus-visible:not([disabled]){
   outline-color:var(--rgb-100-100-100);}
@@ -27,17 +28,16 @@ ui-switch::before{
   aspect-ratio:1;
   border-radius:50%;
   background-color:var(--color-white);
-  transition-property:transform;
   transition-duration:var(--ui-transition-duration);
-  will-change:transform;
+  transition-property:transform;
   transform:translateX(
     calc(var(--ui-object-height) / 8)
   );}
 
-ui-switch[checked]::before{
+ui-switch[aria-checked="true"]::before{
   transform:translateX(
     calc(var(--ui-object-height) + (var(--ui-object-height) / 8))
   );}
 
-ui-switch[checked]{
+ui-switch[aria-checked="true"]{
   background-color:rgb(35,150,245);}
