--- a/ui/ui-styles.css
+++ b/ui/ui-styles.css
@@ -3,6 +3,7 @@
 @import './ui-icon/ui-icon.css';
 @import './ui-input/ui-input.css';
 @import './ui-switch/ui-switch.css';
+@import './ui-checkbox/ui-checkbox.css';
 @import './ui-text/ui-text.css';
 
 :root{
