--- a/ui/ui-icon/ui-icon.css
+++ b/ui/ui-icon/ui-icon.css
@@ -3,16 +3,17 @@ ui-icon{
   align-items:center;
   vertical-align:middle;
   justify-content:center;
-  width:20px;
-  height:20px;}
+  height:24px;
+  width:fit-content;
+  aspect-ratio:1;}
 
 ui-icon[animated]{
   transition-duration:var(--ui-transition-duration);
   transition-property:color;}
 
 ui-icon > svg{
-  width:100%;
   height:100%;
+  width:fit-content;
   aspect-ratio:1;
   fill:currentColor;
   shape-rendering:geometricPrecision;
