--- a/ui/ui-icon/ui-icon.css
+++ b/ui/ui-icon/ui-icon.css
@@ -3,7 +3,7 @@ ui-icon{
   align-items:center;
   vertical-align:middle;
   justify-content:center;
-  height:24px;
+  height:var(--ui-object-height);
   width:fit-content;
   aspect-ratio:1;}
 
