--- a/ui/ui-checkbox/ui-checkbox.css
+++ b/ui/ui-checkbox/ui-checkbox.css
@@ -13,16 +13,13 @@ ui-checkbox{
   outline-style:solid;
   outline-color:transparent;
   background-color:rgb(30,30,30);
-  line-height:1;
+  color:transparent;
   cursor:pointer;
   overflow:hidden;}
 
 ui-checkbox[animated]{
   transition-duration:var(--ui-transition-duration);
   transition-property:background-color,color;}
-
-ui-checkbox:focus-visible:not([disabled]){
-  outline-color:rgb(100,100,100);}
 
 ui-checkbox::before{
   content:'';
@@ -31,14 +28,14 @@ ui-checkbox::before{
   border-radius:calc(var(--ui-object-height) / 4);
   border-width:2px;
   border-style:solid;
-  border-color:rgb(100,100,100);}
+  border-color:rgb(70,70,70);}
+
+ui-checkbox:focus-visible:not([disabled]){
+  outline-color:rgb(100,100,100);}
 
 ui-checkbox > ui-icon{
-  position:absolute;
-  padding:calc(var(--ui-object-height) / 10);
-  aspect-ratio:1;
-  color:transparent;}
+  position:absolute;}
 
-ui-checkbox[animated][checked] > ui-icon{
+ui-checkbox[checked] > ui-icon{
   background-color:rgb(60,120,205);
   color:rgb(255,255,255);}
