--- a/ui/ui-divider/ui-divider.css
+++ b/ui/ui-divider/ui-divider.css
@@ -10,13 +10,13 @@ ui-divider::after{
   flex-grow:1;
   background-color:rgb(50,50,50);}
 
-ui-divider[label] > span{
+ui-divider[text] > span{
   font-size:var(--ui-font-size-x-small);
   color:rgb(175,175,175);
   white-space:nowrap;}
 
-ui-divider[label][text-align="start"]::before,
-ui-divider[label][text-align="end"]::after{
+ui-divider[text][text-align="start"]::before,
+ui-divider[text][text-align="end"]::after{
   flex-grow:0;}
 
 ui-divider[axis="x"]{
@@ -28,8 +28,8 @@ ui-divider[axis="x"] > span{padding-inline:15px;}
 ui-divider[axis="x"]::before,
 ui-divider[axis="x"]::after{height:1px;}
 
-ui-divider[axis="x"][label][text-align="start"]::before,
-ui-divider[axis="x"][label][text-align="end"]::after{
+ui-divider[axis="x"][text][text-align="start"]::before,
+ui-divider[axis="x"][text][text-align="end"]::after{
   width:20px;}
 
 ui-divider[axis="y"]{
@@ -41,6 +41,6 @@ ui-divider[axis="y"] > span{padding-block:10px;}
 ui-divider[axis="y"]::before,
 ui-divider[axis="y"]::after{width:1px;}
 
-ui-divider[axis="y"][label][text-align="start"]::before,
-ui-divider[axis="y"][label][text-align="end"]::after{
+ui-divider[axis="y"][text][text-align="start"]::before,
+ui-divider[axis="y"][text][text-align="end"]::after{
   height:20px;}
