--- a/ui/ui-styles.css
+++ b/ui/ui-styles.css
@@ -26,6 +26,14 @@
   --ui-color-white:oklch(100% 0 0);
   --ui-color-black:oklch(0% 0 0);
 
+
+
+  --ui-color-info:rgb(25,125,230);
+  --ui-color-warning:rgb(245,180,40);
+  --ui-color-error:rgb(230,60,60);
+  --ui-color-success:rgb(45,160,80);
+
+  --ui-color-blue-050:rgb(0,125,255);
   --ui-transition-duration:0.2s;
 }
 
