--- a/theme/theme.css
+++ b/theme/theme.css
@@ -24,8 +24,11 @@ a{
   color:var(--ui-color-white);}
 
 iframe{border:none;}
-code{display:block;}
 pre{margin:0;}
+
+code{
+  font-family:var(--font-family-ui-monospace);
+  letter-spacing:1px;}
 
 h1,h2,h3,h4,h5,h6{
   margin:0;}
@@ -39,7 +42,6 @@ body{
   height:100%;}
 
 body{
-  line-height:var(--line-height);
   font-family:var(--font-family);
   font-size:var(--ui-font-size-medium);
   color:var(--ui-color-white);
@@ -98,7 +100,9 @@ nav span.active{
   background-color:rgb(25,25,25);}
 
 article{
-  position:relative;
+  display:flex;
+  flex-direction:column;
+  row-gap:50px;
   width:1000px;
   max-width:1000px;
   padding:60px 10px;
@@ -110,7 +114,8 @@ article{
 .intro{
   display:flex;
   flex-direction:column;
-  row-gap:30px;}
+  row-gap:30px;
+  line-height:var(--line-height);}
 
 .intro > h1{
   line-height:1;
@@ -137,60 +142,53 @@ article{
 
 
 
-/* content */
-.content{
-  display:flex;
-  flex-direction:column;
-  row-gap:10px;
-  padding:50px 0;}
 
-.content > .example{
+
+/* content */
+.content,
+.content > .content-item{
   display:flex;
-  flex-direction:column;
+  flex-direction:column;}
+
+.content{
+  row-gap:50px;}
+
+.content-item > .example{
+  border:1px solid rgb(25,25,25);
   border-radius:var(--ui-border-radius-default);
   overflow:hidden;}
 
-.content > .example{
-  border:1px solid rgb(25,25,25);}
-
-.content > .example:not(:last-child){
-  margin-bottom:40px;}
-
-.content > .example > .toolbar{
-  padding:10px;
-  border-bottom:1px solid rgb(25,25,25);}
-
-.content > .example > .preview,
-.content > .example > code{
-  width:100%;
-  padding:15px;}
-
-.content > .example > .preview{
+.content-item > .example > .preview{
   display:flex;
   flex-wrap:wrap;
   justify-content:center;
   gap:10px;}
 
-article .example code{
-  font-family:var(--font-family-ui-monospace);
-  border-top:1px solid rgb(25,25,25);}
+.content-item > .example > .preview,
+.content-item > .example > .code{
+  padding:15px;}
 
-article .example code span{
-  letter-spacing:1px;
-  display:block;}
+.content-item > .example > .code{
+  background-color:rgb(10,10,10);}
+
+.content-item > .example > .preview,
+.content-item > .example > .toolbar{
+  border-bottom:1px solid rgb(25,25,25);}
+
+.content-item > .example > .toolbar{
+  display:flex;
+  padding:5px;}
 
 
-
-/* content icons-pack */
-.content.icons-pack > .example{
-  border:none;}
-
-.content.icons-pack > .example > .preview{
-  background:transparent;
-  justify-content:start;
+/* icons */
+.content-item > .icons{
+  display:inline-flex;
+  gap:20px;
+  border:none;
+  flex-wrap:wrap;
   padding:0;}
 
-.content.icons-pack > .example > .preview > .icon-card{
+.content-item > .icons > .icon-card{
   display:flex;
   min-width:100px;
   row-gap:12px;
@@ -203,6 +201,6 @@ article .example code span{
   border-radius:var(--ui-border-radius-default);
   line-height:1;}
 
-.content.icons-pack > .example > .preview > .icon-card > .icon-name{
+.content-item > .icons > .icon-card > .icon-name{
   color:rgb(175,175,175);
   font-size:var(--ui-font-size-x-small);}
