--- a/ui/ui-styles.css
+++ b/ui/ui-styles.css
@@ -1,6 +1,7 @@
 @import './ui-button/ui-button.css';
 @import './ui-checkbox/ui-checkbox.css';
 @import './ui-divider/ui-divider.css';
+@import './ui-field/ui-field.css';
 @import './ui-focus/ui-focus.css';
 @import './ui-icon/ui-icon.css';
 @import './ui-input/ui-input.css';
