--- a/ui/ui-field/ui-field.css
+++ b/ui/ui-field/ui-field.css
@@ -3,6 +3,6 @@ ui-field{
   display:inline-flex;
   align-items:center;}
 
-ui-field > ui-label{
+ui-field > label{
   padding-inline:10px;
   padding-top:2px;}
