--- a/ui/ui-textarea/ui-textarea.css
+++ b/ui/ui-textarea/ui-textarea.css
@@ -7,6 +7,7 @@ ui-textarea{
   height:var(--ui-object-height);
   width:100%;
   max-width:100%;
+  min-width:100px;
   padding:16px;
   border:none;
   outline-offset:2px;
