--- a/ui/ui-divider/ui-divider.css
+++ b/ui/ui-divider/ui-divider.css
@@ -19,28 +19,28 @@ ui-divider[text][text-align="start"]::before,
 ui-divider[text][text-align="end"]::after{
   flex-grow:0;}
 
-ui-divider[axis="x"]{
+ui-divider[orientation="horizontal"]{
   width:100%;
   flex-direction:row;}
 
-ui-divider[axis="x"] > span{padding-inline:15px;}
+ui-divider[orientation="horizontal"] > span{padding-inline:15px;}
 
-ui-divider[axis="x"]::before,
-ui-divider[axis="x"]::after{height:1px;}
+ui-divider[orientation="horizontal"]::before,
+ui-divider[orientation="horizontal"]::after{height:1px;}
 
-ui-divider[axis="x"][text][text-align="start"]::before,
-ui-divider[axis="x"][text][text-align="end"]::after{
+ui-divider[orientation="horizontal"][text][text-align="start"]::before,
+ui-divider[orientation="horizontal"][text][text-align="end"]::after{
   width:20px;}
 
-ui-divider[axis="y"]{
+ui-divider[orientation="vertical"]{
   height:100%;
   flex-direction:column;}
 
-ui-divider[axis="y"] > span{padding-block:10px;}
+ui-divider[orientation="vertical"] > span{padding-block:10px;}
 
-ui-divider[axis="y"]::before,
-ui-divider[axis="y"]::after{width:1px;}
+ui-divider[orientation="vertical"]::before,
+ui-divider[orientation="vertical"]::after{width:1px;}
 
-ui-divider[axis="y"][text][text-align="start"]::before,
-ui-divider[axis="y"][text][text-align="end"]::after{
+ui-divider[orientation="vertical"][text][text-align="start"]::before,
+ui-divider[orientation="vertical"][text][text-align="end"]::after{
   height:20px;}
